Layout fixes to make sure player is always visible

--- a/src/app/components/player/player.component.scss
+++ b/src/app/components/player/player.component.scss
@@ -1,5 +1,8 @@
 :host {
-  padding: 16px;
+  border-top: 1px solid #ccc;
+  overflow: hidden;
+
+  // height: 0;
 }
 
 .player {
@@ -7,6 +10,8 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+
+  margin: 16px;
 }
 
 .player-button {
@@ -66,8 +71,8 @@
   text-align: right;
 
   img {
-    vertical-align: middle;
     width: 66px;
     height: 66px;
+    vertical-align: middle;
   }
 }
