--- a/src/app/components/search-results/search-results.component.scss
+++ b/src/app/components/search-results/search-results.component.scss
@@ -2,7 +2,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
+  overflow: auto;
 }
 
 
@@ -13,7 +13,7 @@
 .header {
   position: fixed;
   top: 0;
-  right: 0;
+  right: 20px;
   left: 0;
   background: rgba(255, 255, 255, 0.9);
 
